# video-stabilizer

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
app/: CMakeLists.txt  app.cpp
include/: utils.h
include/app/: app.h  gui.h  log.h  model.h  shader.h
include/image/: feature_tracker.h
include/logger/: logger.h
include/video/: stabilizer.h  vid.h
shaders/: CMakeLists.txt  fragment.glsl  vertex.glsl
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp
src/image/: CMakeLists.txt  feature_tracker.cpp
src/logger/: CMakeLists.txt  logger.cpp
src/video/: CMakeLists.txt  stabilizer.cpp  vid.cpp
